try detecting relative url

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -14,20 +14,20 @@
 	============================================= -->
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,400italic,600,700|Roboto-slab:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
-    <link rel="stylesheet" href="/style.css" type="text/css" />
-    <link rel="stylesheet" href="/css/dark.css" type="text/css" />
-    <link rel="stylesheet" href="/css/font-icons.css" type="text/css" />
-    <link rel="stylesheet" href="/css/animate.css" type="text/css" />
-    <link rel="stylesheet" href="/css/magnific-popup.css" type="text/css" />
+    <link rel="stylesheet" href="{{base}}/css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="{{base}}/style.css" type="text/css" />
+    <link rel="stylesheet" href="{{base}}/css/dark.css" type="text/css" />
+    <link rel="stylesheet" href="{{base}}/css/font-icons.css" type="text/css" />
+    <link rel="stylesheet" href="{{base}}/css/animate.css" type="text/css" />
+    <link rel="stylesheet" href="{{base}}/css/magnific-popup.css" type="text/css" />
 
-    <link rel="stylesheet" href="/css/responsive.css" type="text/css" />
+    <link rel="stylesheet" href="{{base}}/css/responsive.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lt IE 9]>
 		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<![endif]-->
 
-    <link rel="stylesheet" href="/css/custom.css" type="text/css" />
+    <link rel="stylesheet" href="{{base}}/css/custom.css" type="text/css" />
 
     <!-- Document Title
 	============================================= -->
@@ -135,15 +135,15 @@
 
     <!-- External JavaScripts
 	============================================= -->
-    <script type="text/javascript" src="/js/jquery.js"></script>
-    <script type="text/javascript" src="/js/plugins.js"></script>
+    <script type="text/javascript" src="{{base}}/js/jquery.js"></script>
+    <script type="text/javascript" src="{{base}}/js/plugins.js"></script>
 
     <!-- Footer Scripts
 	============================================= -->
-    <script type="text/javascript" src="/js/functions.js"></script>
+    <script type="text/javascript" src="{{base}}/js/functions.js"></script>
 
     <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyCmivtC_tSletvuNhL5GFclOB00P1pOzSk"></script>
-    <script type="text/javascript" src="/js/jquery.gmap.js"></script>
+    <script type="text/javascript" src="{{base}}/js/jquery.gmap.js"></script>
 
     <script type="text/javascript">
         $('#google-map').gMap({
@@ -154,7 +154,7 @@
                 address: "Ramona Street, Palo Alto, California",
                 html: '<div style="width: 300px;"><h4 style="margin-bottom: 8px;">Hi, we\'re <span>String Labs</span></h4><p class="nobottommargin">We are a crypto studio, incubator and investor based in Palo Alto.</p></div>',
                 icon: {
-                    image: "/images/icons/map-icon-red.png",
+                    image: "{{base}}/images/icons/map-icon-red.png",
                     iconsize: [32, 39],
                     iconanchor: [32, 39]
                 }
