try detecting relative url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@ layout: outer
 
             <div class="slider-parallax-inner">
 
-                <div class="force-full-screen full-screen dark" style="background: url('/images/string/reactor.jpg') center center;">
+                <div class="force-full-screen full-screen dark" style="background: url('{{base}}/images/string/reactor.jpg') center center;">
 
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-center">
