try detecting relative url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 ---
 layout: outer
 ---
+{% include base.html %}
 {% if page.hero %}
       <!-- Hero
 		============================================= -->
