--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
+{% include base.html %}
 <html dir="ltr" lang="en-US">
-
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="String Labs is a crypto studio, incubator and investor based in Palo Alto">
@@ -171,5 +171,4 @@
     <!-- Google Map End -->
 
 </body>
-
 </html>
