try detecting relative url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,9 @@
 ---
 layout: outer
 ---
-{% include base.html %}
+
+{% include required-fragment-initialization-scripts.html %}
+
 {% if page.hero %}
       <!-- Hero
 		============================================= -->
