--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-{% include base.html %}
+
+{% include required-fragment-initialization-scripts.html %}
+
 <html dir="ltr" lang="en-US">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
