Ok, this should finally work and we're ready redirect

--- a/css/custom.css
+++ b/css/custom.css
@@ -84,3 +84,9 @@ h6 {
 	margin-right: 0px;
 	border-right: 0px;
 }
+
+.disabled {
+    pointer-events: none;
+    cursor: default;
+    opacity: 0.3;
+}
