--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -73,7 +73,7 @@
 							<li><a href="{{ page.team-link }}" {% if page.menu-data-href %} data-href="#section-team" {% endif %}><div>Team</div></a></li>
 							<li><a href="{{ page.investors-link }}" {% if page.menu-data-href %} data-href="#section-investors" {% endif %}><div>Investors</div></a></li>
 							<li><a href="{{ page.contact-link }}" {% if page.menu-data-href %} data-href="#section-contact" {% endif %}><div>Contact</div></a></li>
-							<li><a href="news/"><div>News...</div></a></li>
+							<li><a href="news/" {% if !page.disable-news-link %} class="disabled" {% endif %}><div>News...</div></a></li>
 						</ul>
 
                     </nav>
