Give blog posts separate pages. Create new post. Add links to video posts.

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -1,3 +1,7 @@
+---
+news-link: news/
+---
+
 <!DOCTYPE html> {% include required-fragment-initialization-scripts.html %}
 
 <html dir="ltr" lang="en-US">
@@ -69,27 +73,27 @@
 
                         <ul>
                             <li>
-                                <a href="{{ page.projects-link }}" {% if page.menu-data-href %} data-href="#section-work" {% endif %}>
+                                <a href="{{ base }}/{{ page.projects-link }}" {% if page.menu-data-href %} data-href="#section-work" {% endif %}>
                                     <div>Projects</div>
                                 </a>
                             </li>
                             <li>
-                                <a href="{{ page.team-link }}" {% if page.menu-data-href %} data-href="#section-team" {% endif %}>
+                                <a href="{{ base }}/{{ page.team-link }}" {% if page.menu-data-href %} data-href="#section-team" {% endif %}>
                                     <div>Team</div>
                                 </a>
                             </li>
                             <li>
-                                <a href="{{ page.investors-link }}" {% if page.menu-data-href %} data-href="#section-investors" {% endif %}>
+                                <a href="{{ base }}/{{ page.investors-link }}" {% if page.menu-data-href %} data-href="#section-investors" {% endif %}>
                                     <div>Investors</div>
                                 </a>
                             </li>
                             <li>
-                                <a href="{{ page.contact-link }}" {% if page.menu-data-href %} data-href="#section-contact" {% endif %}>
+                                <a href="{{ base }}/{{ page.contact-link }}" {% if page.menu-data-href %} data-href="#section-contact" {% endif %}>
                                     <div>Contact</div>
                                 </a>
                             </li>
                             <li>
-                                <a href="news/" {% if !page.disable-news-link %} class="disabled" {% endif %}>
+                                <a href="{{ base }}/{{ page.news-link }}" {% if !page.disable-news-link %} class="disabled" {% endif %}>
                                     <div>News...</div>
                                 </a>
                             </li>
