Fix news link bug

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -93,7 +93,7 @@ news-link: news/
                                 </a>
                             </li>
                             <li>
-                                <a href="{{ base }}/{{ page.news-link }}" {% if !page.disable-news-link %} class="disabled" {% endif %}>
+                                <a href="{{ base }}/news/" {% if !page.disable-news-link %} class="disabled" {% endif %}>
                                     <div>News...</div>
                                 </a>
                             </li>
