Debug frigging Jekyll weirdness on github.. o god

--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -17,7 +17,7 @@ hero: false
 
 			<div class="container clearfix">
 				<ol class="breadcrumb">
-					<li><a href="{{ base }}/{{ page.news-link }}">News</a></li>
+					<li><a href="{{ base }}/news/">News</a></li>
 					<li class="active">Post</li>
 				</ol>
 			</div>
