Add Tomomi Menjo to team list

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="String Labs is a crypto studio, incubator and investor based in Palo Alto">
-    <meta name="keywords" content="Ethereum,Dfinity,PHI,decentralization,cryptography,distributed computing,DApps,incubator,investor,lab">
+    <meta name="keywords" content="Ethereum,Dfinity,PHI,DApps,decentralized,decentralization,cryptography,consensus,distributed computing,incubator,investor,lab">
     <meta name="author" content="String Labs" />
 
     <!-- Stylesheets
