--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -10,55 +10,61 @@ hero: false
 
 {% include required-fragment-initialization-scripts.html %}
 
-		<!-- Page Title
-		============================================= -->
-		<section id="page-title">
+        <!-- Page Title
+        ============================================= -->
+        <section id="page-title">
 
-			<div class="container clearfix">
-				<ol class="breadcrumb">
-					<li><a href="{{ base }}/news/">News</a></li>
-					<li class="active">Post</li>
-				</ol>
-			</div>
+            <div class="container clearfix">
+                <ol class="breadcrumb">
+                    <li><a href="{{ base }}/news/">News</a></li>
+                    <li class="active">Post</li>
+                </ol>
+            </div>
 
-		</section><!-- #page-title end -->
+        </section><!-- #page-title end -->
 
 
-		<!-- Content
-		============================================= -->
-		<section id="content">
+        <!-- Content
+        ============================================= -->
+        <section id="content">
 
-			<div class="content-wrap">
+            <div class="content-wrap">
 
-				<div class="container clearfix">
+                <div class="container clearfix">
 
-					<div class="single-post nobottommargin">
+                    <div class="single-post nobottommargin">
 
-						<!-- Single Post
-						============================================= -->
-						<div class="entry clearfix">
+                        <!-- Single Post
+                        ============================================= -->
+                        <div class="entry clearfix">
 
-							{{ content }}
+                            {{ content }}
 
-						</div>
+                        </div>
 
-						<!-- Post Author Info
-						============================================= -->
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3 class="panel-title">Posted by <span><a href="{{ page.author-link }}">{{ page.author }}</a></span></h3>
-							</div>
-							<div class="panel-body">
-								<div class="author-image">
-									<img src="{{ base }}/images/team/dom-head2.jpg" alt="{{ page.author }}" class="img-circle">
-								</div>
-								{{ page.author-bio }}
-							</div>
-						</div><!-- Post Single - Author End -->
+                        <!-- Post Author Info
+                        ============================================= -->
 
-						<div class="line"></div>						
-					</div>
-				</div>
-			</div>
-		</section>
+                        {% assign author = site.authors[page.author] %}
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Posted by <span><a href="{{ page.author-link }}">{{ page.author }}</a></span></h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="author-image">
+                                    
+                                    <img src="{{ base }}/images/team/{{ author.avatar }}" alt="{{ author.display_name }}" class="img-circle">
+                                </div>
+                                {{ page.author-bio }}
+                            </div>
+                        </div><!-- Post Single - Author End -->
+
+                        <div class="line"></div>                        
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
 
