--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@ layout: outer
 
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-center">
-                            <h2 data-animate="fadeInDown">{{ page.hero-title }}</h2>
-                            <p data-animate="fadeInUp" data-delay="400">{{ page.hero-subtitle }}</p>
+                            <h2 data-animate="fadeInDown">{% t index.hero-title %}</h2>
+                            <p data-animate="fadeInUp" data-delay="400">{% t index.hero-subtitle %}</p>
                         </div>
                     </div>
 
