first JP translation added [40% complete]

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -110,6 +110,11 @@
                                      <a href="/cn"> {% t global.chinese %}
 </a>
                                      </li>
+                                       <li class="sub-menu-content">
+
+                                     <a href="/ja"> {% t global.japanese %}
+</a>
+                                     </li>
                                            
                             </li>
 
