minor fixes to deck links and add lang icon at top right

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -97,7 +97,7 @@
                                <a href="#"><div class="subtitle" style="color:#75DB3C;">
 
 
- {% t global.english %}
+ 🌐&nbsp; {% t global.english %}
 
                                </div></a>
                                <ul>
