tech talk videos modal popup under dfinity section + multi lang support for the deck

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -74,6 +74,12 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="{{ base }}/{{ page.dfinity-link }}" {% if page.menu-data-href %} data-href="#section-dfinity" {% endif %}>
+                                    <div>DFINITY</div>
+                                </a>
+                            </li>
+                            
+                            <li>
                                 <a href="{{ base }}/{{ page.team-link }}" {% if page.menu-data-href %} data-href="#section-team" {% endif %}>
                                     <div>{% t index.navbar-team %}</div>
                                 </a>
