revert wrong sub module add

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -108,17 +108,17 @@
                                </div></a>
                                <ul>
                                  <li class="sub-menu-content">
-                                        <a href="/?no-autolang=true"> {% t global.english %}</a>
+                                        <a href="/#"> {% t global.english %}</a>
                                     
                                  </li>
                                                                   <li class="sub-menu-content">
 
-                                     <a href="/cn?no-autolang=true"> {% t global.chinese %}
+                                     <a href="/cn"> {% t global.chinese %}
 </a>
                                      </li>
                                        <li class="sub-menu-content">
 
-                                     <a href="/ja?no-autolang=true"> {% t global.japanese %}
+                                     <a href="/ja"> {% t global.japanese %}
 </a>
                                      </li>
                                            
