--- a/_includes/i18n.html
+++ b/_includes/i18n.html
@@ -22,17 +22,33 @@ function getParameterByName(name, url) {
 }
 
     
-    var language = window.navigator.userLanguage || window.navigator.language;
-    var noAutolang = getParameterByName("no-autolang");
-    if (!noAutolang) {
-    	// window.alert(language);
-    if (language == "zh-cn" || language=="zh-tw" || language=="zh-hk")
-        window.location.replace("/cn?no-autolang=true");
-    else if (language == "en-us")
-    	    window.location.replace("/?no-autolang=true");
-    else if (language == "ja-jp")
-    	    window.location.replace("/ja/?no-autolang=true");
-}
+    var userLang = navigator.language || navigator.userLanguage; 
+
+            console.log(userLang);
+
+    if (userLang == null)
+        userLang = "";
+    userLang = userLang.toLowerCase();
+
+    var url = window.location.href;
+    
+
+    // Detect if there's any target. Make sure we don't redirect language if there's a target specified.
+    var targetSpecified = true;
+    var isRoot = location.pathname == "/"; //Equals true if we're at the root
+    if (isRoot && !url.includes("#")) {
+        targetSpecified = false;
+        console.log("targetSpecified = false");
+    }
+
+    if (!targetSpecified) {
+        // window.alert(userLang);
+        console.log(userLang);
+     if (userLang == "zh-cn" || userLang=="zh-tw" || userLang=="zh-hk")
+        window.location.replace("/cn");
+     else if (userLang == "ja-jp")
+    	window.location.replace("/ja");
+    }
     
 
 
