--- a/css/imports/helpers.css
+++ b/css/imports/helpers.css
@@ -192,7 +192,7 @@ span.middot {
 
 .font-primary { font-family: 'Raleway', sans-serif; }
 
-.font-secondary { font-family: 'Crete Round', serif; }
+.font-secondary { font-family: 'Raleway', sans-serif; }
 
 .bgicon {
 	display: block;
