--- a/css/imports/shortcodes/buttons.css
+++ b/css/imports/shortcodes/buttons.css
@@ -99,7 +99,7 @@ body:not(.device-touch) .button {
 	font-size: 14px;
 	font-weight: 400;
 	letter-spacing: 1px;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 	text-transform: none;
 }
