--- a/less/variables.less
+++ b/less/variables.less
@@ -39,7 +39,7 @@
 
 @body-font:                     'Lato', sans-serif;
 @heading-font:                  'Raleway', sans-serif;
-@secondary-font:                'Crete Round', serif;
+@secondary-font:                'Raleway', sans-serif;
 
 
 
