--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -25,7 +25,7 @@ $margin-big:                    80px;
 
 $body-font:                     'Lato', sans-serif;
 $heading-font:                  'Raleway', sans-serif;
-$secondary-font:                'Crete Round', serif;
+$secondary-font:                'Raleway', sans-serif;
 
 
 //-------------------- Font Sizes --------------------//
