--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,29 +8,22 @@ layout: outer
       <!-- Hero
 		============================================= -->
         <section id="slider" class="slider-parallax full-screen force-full-screen with-header swiper_wrapper page-section clearfix">
-
             <div class="slider-parallax-inner">
-
                 <div class="swiper-container swiper-parent">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide dark" style="background-image: url('{{ base }}/images/string/reactor.jpg');">
+                        <div class="swiper-slide dark bg-stringlabs">
                             <div class="container clearfix">
                                 <div class="slider-caption slider-caption-center">
                                      <h2 data-caption-animate="fadeInDown">
-                                {% t index.hero-title %}
-                                
-                            </h2>
-                            <p data-caption-animate="fadeInUp" data-delay="400">{% t index.hero-subtitle %}</p>
+                                        {% t index.hero-title %}
+                                    </h2>
+                                    <p data-caption-animate="fadeInUp" data-delay="400">{% t index.hero-subtitle %}</p>
                                 </div>
                             </div>
                         </div>
-                       
                     </div>
-                  
                 </div>
-
             </div>
-
         </section>
 
 {% endif %}
