--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -10,8 +10,7 @@
 
     <!-- Stylesheets
 	============================================= -->
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
-    <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,400italic,600,700|Roboto-slab:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,300i,400,400i,600,600i,700" rel="stylesheet">
     <link rel="stylesheet" href="{{ base }}/css/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="{{ base }}/style.css" type="text/css" />
     <link rel="stylesheet" href="{{ base }}/css/dark.css" type="text/css" />
@@ -78,7 +77,7 @@
                                     <div>DFINITY</div>
                                 </a>
                             </li>
-                            
+
                             <li>
                                 <a href="{{ base }}/{{ page.team-link }}" {% if page.menu-data-href %} data-href="#section-team" {% endif %}>
                                     <div>{% t index.navbar-team %}</div>
@@ -109,7 +108,7 @@
                                <ul>
                                  <li class="sub-menu-content">
                                         <a href="/#"> {% t global.english %}</a>
-                                    
+
                                  </li>
                                                                   <li class="sub-menu-content">
 
@@ -121,12 +120,12 @@
                                      <a href="/ja"> {% t global.japanese %}
 </a>
                                      </li>
-                                           
+
                             </li>
 
                         </ul>
-                       
-                         
+
+
                     </nav>
                     <!-- #primary-menu end -->
 
@@ -223,7 +222,7 @@
     <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyCmivtC_tSletvuNhL5GFclOB00P1pOzSk&callback=initMap"  async defer></script>
     <script type="text/javascript" src="{{ base }}/js/jquery.gmap.js"></script>
 
-<script> 
+<script>
             $(document).ready(
                 function() {
                     console.log("init event");
