--- a/css/components/pricing-table.css
+++ b/css/components/pricing-table.css
@@ -365,7 +365,7 @@
 
 /* Rabten */
 .pricing--rabten .pricing--item {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Raleway', sans-serif;
 	padding: 2em 4em;
 	cursor: default;
 	color: #262b38;
@@ -940,7 +940,7 @@
 
 /* tashi */
 .pricing--tashi .pricing--item {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Raleway', sans-serif;
 	margin: 0.5em;
 	padding: 2em 2.5em;
 	text-align: left;
