--- a/css/imports/shortcodes/headings.css
+++ b/css/imports/shortcodes/headings.css
@@ -257,7 +257,7 @@
 	display: block;
 	margin: 0 0 5px;
 	font-size: 16px;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 	font-weight: 400;
 	color: #999;
