--- a/css/imports/shortcodes/misc.css
+++ b/css/imports/shortcodes/misc.css
@@ -651,7 +651,7 @@ button.toast-close-button {
 	font-size: 56px;
 	font-weight: 400;
 	font-style: italic;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	text-transform: none;
 }
 
