--- a/css/imports/shortcodes/team.css
+++ b/css/imports/shortcodes/team.css
@@ -55,7 +55,7 @@
 	display: block;
 	color: #1ABC9C;
 	font-weight: 400;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 	font-size: 15px;
 	margin-top: 5px;
