--- a/css/imports/shortcodes/testimonials.css
+++ b/css/imports/shortcodes/testimonials.css
@@ -72,7 +72,7 @@
 
 .testi-content p {
 	margin-bottom: 0;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 }
 
