--- a/style.css
+++ b/style.css
@@ -418,7 +418,7 @@ span.middot {
 
 .font-primary { font-family: 'Raleway', sans-serif; }
 
-.font-secondary { font-family: 'Crete Round', serif; }
+.font-secondary { font-family: 'Raleway', sans-serif; }
 
 .bgicon {
 	display: block;
@@ -4968,7 +4968,7 @@ body.device-touch.device-xxs .portfolio-notitle .portfolio-overlay { display: no
 	line-height: 14px;
 	margin: 0 10px 15px 0;
 	color: #999;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 }
 
@@ -5038,7 +5038,7 @@ body:not(.device-touch) .entry-link {
 .entry-link span {
 	display: block;
 	margin-top: 5px;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 	font-weight: normal;
 	text-transform: none;
@@ -5051,7 +5051,7 @@ body:not(.device-touch) .entry-link {
 
 .entry blockquote p {
 	font-weight: 400;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 }
 
@@ -5396,7 +5396,7 @@ body:not(.device-touch) .entry-link {
 	display: inline-block;
 	border-bottom: 1px solid #1ABC9C;
 	padding: 0 2px;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 }
 
@@ -5666,7 +5666,7 @@ body:not(.device-touch) .entry-link {
 .comment-content .comment-author span a {
 	font-size: 12px;
 	font-weight: normal;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 	color: #AAA;
 }
@@ -6683,7 +6683,7 @@ body:not(.device-touch) .button {
 	font-size: 14px;
 	font-weight: 400;
 	letter-spacing: 1px;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 	text-transform: none;
 }
@@ -9683,7 +9683,7 @@ body:not(.device-touch) .clients-grid li a {
 
 .testi-content p {
 	margin-bottom: 0;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 }
 
@@ -9873,7 +9873,7 @@ body:not(.device-touch) .clients-grid li a {
 	display: block;
 	color: #1ABC9C;
 	font-weight: 400;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 	font-size: 15px;
 	margin-top: 5px;
@@ -11342,7 +11342,7 @@ label.error { display: none !important; }
 	display: block;
 	margin: 0 0 5px;
 	font-size: 16px;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	font-style: italic;
 	font-weight: 400;
 	color: #999;
@@ -12376,7 +12376,7 @@ body:not(.device-touch) .tagcloud a {
 	font-size: 56px;
 	font-weight: 400;
 	font-style: italic;
-	font-family: 'Crete Round', serif;
+	font-family: 'Raleway', sans-serif;
 	text-transform: none;
 }
 
@@ -13524,4 +13524,3 @@ body:not(.no-transition) #wrapper,
 	margin:0!important;
 	padding:0!important
 }
-
