--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@ layout: outer
                     <div class="swiper-wrapper">
                         <div class="swiper-slide dark bg-stringlabs">
                             <div class="container clearfix">
-                                <div class="slider-caption slider-caption-center">
+                                <div class="slider-caption slider-caption-center clearfix">
                                      <h2 data-caption-animate="fadeInDown">
                                         {% t index.hero-title %}
                                     </h2>
